# starter-project

./: .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: linter.yaml
src/: cli.py  generator.py  prompts.py
templates/aiogram/: README.md  config.py  main.py
templates/aiogram/src/handlers/: start.py
templates/fastapi/: README.md  main.py
templates/fastapi/src/: config.py
